on template stuff

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -875,22 +875,19 @@ In P1, I found that as I worked with the learners to respond ot their requests t
 At one stage I did a test of that process by printing out different elements of the template and asking them to complete them roughly in order as a jigsaw activity. The participants expressed surprise at how much familiarity they had built up with the code.
 INSERT QUOTE FROM SU AND TOBY
 
-Despite building familarity with code, at this stage  the process of adding elements still needed significant support.
+Despite building familarity with code, at this stage event simple game changes or adding new elements still required significant support.
 
-In a redesign of the startign code template at the end of P1, I added the following design techniques to the template to make modifying the game easier.
+In a redesign of the startign code template at the end of P1, following the UMC (Use - Modify - Create) model  [@lee_computational_2011], I added several following design techniques to the template to make quick modification of the game easier. Descriptions of three of these follow.
+
+<!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
+
+While the focus on this chapter is on design and designs decisions, the following sections include rough analysis of the impact of them. Fuller analysis follows in chapters five and six.  
+
+MOVE THIS ANALYSIS
+In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.
+This approach responds to the feedback from the participant that greater time allocated to hands-on use of tools before making design decisions would be welcome.
 
 
-#### Addressing barriers with template
-
-
-
-
-**more polished**
-At the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus, the learning design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
-
-In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices. This approach responds to the feedback from the participant that greater time allocated to hands-on use of tools before making design decisions would be welcome.
-
-The impact of this starting template in the P2 and 3 and P4 sessions is explored later.
 
 <!-- In phase one, I noted that any addition to the game in terms of adding new any quantity of code created many potential coding, conceptual and organisational challenges. To counter this I adapted the starting game template to allow changes in code were relatively easy to perform but which resulted in potentially large changes in game behaviour and appearance. -->
 
