additions to point 3

--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -19,8 +19,6 @@
     -   [Using scopes of activity as a tool for
         analysis.](#using-scopes-of-activity-as-a-tool-for-analysis.)
 -   [Summary of design evolution](#summary-of-design-evolution)
--   [Commentary on evolution of design by
-    Phase](#commentary-on-evolution-of-design-by-phase)
     -   [P1: Explorations and
         innovations](#p1-explorations-and-innovations)
     -   [P2: The game making using suggested
@@ -51,8 +49,7 @@
             playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
         template](#design-choices-of-the-half-baked-template)
-        -   [Addressing barriers with
-            template](#addressing-barriers-with-template)
+        -   [Quick Start Cards](#quick-start-cards)
     -   [Design behaviours encouraged through use of game
         template](#design-behaviours-encouraged-through-use-of-game-template)
         -   [Variable editing for
@@ -64,8 +61,6 @@
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
-    -   [Discussion on Authenticity of
-        Tools](#discussion-on-authenticity-of-tools)
 -   [4. Participant conflict due to lack of relevant technical
     support](#participant-conflict-due-to-lack-of-relevant-technical-support)
     -   [Tensions and related to navigation of various documentations
@@ -76,10 +71,12 @@
     -   [Discussion on the emergent (and mutual) nature of the design
         (and research?)
         process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
+    -   [Discussion on Authenticity of
+        Tools](#discussion-on-authenticity-of-tools)
+        -   [Authentic tool use and instrumental
+            agency](#authentic-tool-use-and-instrumental-agency)
     -   [Analysis in relation to existing research on related design
         toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
         -   [Comparing design to Scratch and
             Microworlds](#comparing-design-to-scratch-and-microworlds)
-        -   [Authentic tool use and instrumental
-            agency](#authentic-tool-use-and-instrumental-agency)
     -   [Link to next chapter](#link-to-next-chapter)
