--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -9,7 +9,6 @@ categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
 
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -31,8 +30,6 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [Using scopes of activity as a tool for
         analysis.](#using-scopes-of-activity-as-a-tool-for-analysis.)
 -   [Summary of design evolution](#summary-of-design-evolution)
--   [Commentary on evolution of design by
-    Phase](#commentary-on-evolution-of-design-by-phase)
     -   [P1: Explorations and
         innovations](#p1-explorations-and-innovations)
     -   [P2: The game making using suggested
@@ -63,8 +60,7 @@ title: 4. Exploration of the Formative Learning Design Process
             playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
         template](#design-choices-of-the-half-baked-template)
-        -   [Addressing barriers with
-            template](#addressing-barriers-with-template)
+        -   [Quick Start Cards](#quick-start-cards)
     -   [Design behaviours encouraged through use of game
         template](#design-behaviours-encouraged-through-use-of-game-template)
         -   [Variable editing for
@@ -76,8 +72,6 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
-    -   [Discussion on Authenticity of
-        Tools](#discussion-on-authenticity-of-tools)
 -   [4. Participant conflict due to lack of relevant technical
     support](#participant-conflict-due-to-lack-of-relevant-technical-support)
     -   [Tensions and related to navigation of various documentations
@@ -88,12 +82,14 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [Discussion on the emergent (and mutual) nature of the design
         (and research?)
         process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
+    -   [Discussion on Authenticity of
+        Tools](#discussion-on-authenticity-of-tools)
+        -   [Authentic tool use and instrumental
+            agency](#authentic-tool-use-and-instrumental-agency)
     -   [Analysis in relation to existing research on related design
         toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
         -   [Comparing design to Scratch and
             Microworlds](#comparing-design-to-scratch-and-microworlds)
-        -   [Authentic tool use and instrumental
-            agency](#authentic-tool-use-and-instrumental-agency)
     -   [Link to next chapter](#link-to-next-chapter)
 
 ## Research Questions - June 2023
@@ -857,52 +853,44 @@ The a game template served to remove technical barriers to getting immediate fee
 
 ### Design choices of the half-baked template
 
-The process of getting started in P1 took too long and from a motivation of an responsive lacked a guiding structure. To address confusion about how to being coding a game, I introduced a working code example
-as a beginner template using the phaser library. Code
+In participant feedback for P1, one parent indicated that it took too long before in the planning stage
+and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
+
+Other parents requested additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach. In addition, my own motivations to explore research claims which on the engagement value of prioritising modifications to for quick impact on the game and on allowing participants choose over what they wanted to add to their game next.
+
+To address confusion about how to being coding a game, I introduced a working code example as a starter game template using the phaser library.
 
 The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website, one I had completed in preparation for the sessions, called _Making your first game_ [^1]. To use it as a template I adapted it by removing out un-needed code with a focus on simplifying the structure and readability.
 
-Starting templates are a common tool when learning new code frameworks particularly in web technologies. An example being the popular JS framework Bootstrap which provides a number of starting templates based on common design scenarios.
+
+
+In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
 The template in this case followed the following structure:
-- a beginning section out side of a funcition declaring variables
+- a beginning section out side of a function declaring variables
 - a preload function which loads assets into the game
 - a create function which sets up the initial game
 - an update function which listens to and responds to user input, e.g. moving a player on the screen
 
-In P1, I found that as I worked with the learners to respond ot their requests to add in new elements to the game, I was able to to reference different parts of the template and thus build their familiarity with the code.
+The following illustration from the step-based instructions illustrates the structure for participants.
+
+![](./Pictures/overview_of_structure_cropped.png){width=95%}
+4.x - Structure explained in Manual for P2 and P3
+
+In P1, I found that as I worked with the learners to respond to their requests to add in new elements to the game, I was able to to reference different parts of the template and thus build their familiarity with the code.
 
 At one stage I did a test of that process by printing out different elements of the template and asking them to complete them roughly in order as a jigsaw activity. The participants expressed surprise at how much familiarity they had built up with the code.
 INSERT QUOTE FROM SU AND TOBY
 
-Despite building familarity with code, at this stage event simple game changes or adding new elements still required significant support.
+Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
 
-In a redesign of the startign code template at the end of P1, following the UMC (Use - Modify - Create) model  [@lee_computational_2011], I added several following design techniques to the template to make quick modification of the game easier. Descriptions of three of these follow.
+In a redesign of the starting code template at the end of P1, following the UMC (Use - Modify - Create) model  [@lee_computational_2011], I added several following design techniques to the template to make quick modification of the game easier. Descriptions of three of these follow.
 
 <!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
-
-While the focus on this chapter is on design and designs decisions, the following sections include rough analysis of the impact of them. Fuller analysis follows in chapters five and six.  
-
-MOVE THIS ANALYSIS
-In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.
-This approach responds to the feedback from the participant that greater time allocated to hands-on use of tools before making design decisions would be welcome.
 
 
 
 <!-- In phase one, I noted that any addition to the game in terms of adding new any quantity of code created many potential coding, conceptual and organisational challenges. To counter this I adapted the starting game template to allow changes in code were relatively easy to perform but which resulted in potentially large changes in game behaviour and appearance. -->
-
-#### Quick Start Cards - MOVE TO LAST ONE?
-
-Brief help was available via in-line text code comments allowing for self-directed or previously proficient learners to progress with minimal support. In addition, supporting cards (see figure 4.x below) suggested possible adaptations  and illustrated the relevant code changes needed.
-
-![](./Pictures/quickstart_phaser_1.png){width=50%}
-4.x - Example of a Quick start card
-
-
-<!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
-
-The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
-
 
 <!-- NOTE SOME OF THIS CAN  -->
 <!-- I kept the process informal and responsive by allowing participants to choose which one they wanted to work on next. The following sections outline different areas and patterns of activity. -->
@@ -931,19 +919,28 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
 -->
 
-### Design behaviours encouraged through use of game template
+#### Design behaviours encouraged through use of game template
 
-In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
 
-NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5?
+While the focus on this chapter is on design and designs decisions, the following sections include rough analysis of the impact of them. Fuller analysis follows in chapters five and six. To do this, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
 
-The following sections are observations on design behaviour  that I encouraged through tool choice and design
+<!-- NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5? -->
 
-#### Variable editing for movement:
 
-Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code. Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
-#### Level design and prototyping:
+that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect.
+
+**Variable editing for player movement**
+
+The starting template began with the game in a broken state. The
+
+Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code.
+
+Following this first change however behaviour varied greatly.
+
+While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+
+**Level design and prototyping**
 
 The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
 
@@ -952,7 +949,7 @@ The starting game template included a minimal amount of platforms, hazards to av
 <!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
 
 
-#### Use of pixel art to seed narrative and art creativity:
+**Use of pixel art to seed narrative and art creativity**
 
 One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations. As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
 
@@ -962,10 +959,29 @@ One activity that all participants spent some time on was to replace the coloure
 The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
 
 
+#### Introducing the quick start cards
+
+Brief help was available via in-line text code comments allowing for self-directed or previously proficient learners to progress with minimal support.
+
+At the end of P1 trainee teachers created printable resources that highlighted particular key lines of code and variables (see figure 4.x below) and illustrated the relevant code changes needed.
+
+![](./Pictures/quickstart_phaser_1.png){width=50%}
+4.x - Example of a Quick start card
+
+
+<!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
+
+The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
+
+
 
 #### Observations on design behaviours encouraged through use of game template
 
-While the simple changes to the game dynamics and patterns embedded in the starting template were motivation and enagement, some participants soon began to ask how to make additions to the game. A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
+While the initial use of a template was an intuitive response based on my own experience of teaching technology, as the template evolved, I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.
+
+While the simple changes to the game dynamics and patterns embedded in the starting template were motivation and engagement, some participants soon began to ask how to make additions to the game.
+
+A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
 
 At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns mosst closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
 
@@ -1167,9 +1183,8 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 There are similarities and differences between the use of code playgrounds by novices and professionals.
 DEVELOP IF NEEDED
 
-While tempting to say that the use of a template is educational scaffolding and therefore not authentic to a work place setting environment, the use of starting templates is also a common work place tactic. For example the js libary boostrap comes with starter templates.
+A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
 
-Glitch has many such starter templates aimed at professionals trying out a different code language or framework.
 
 **impact?**
 
