change to discussion

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -981,7 +981,7 @@ While the initial use of a template was an intuitive response based on my own ex
 
 While the simple changes to the game dynamics and patterns embedded in the starting template were motivation and engagement, some participants soon began to ask how to make additions to the game.
 
-A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
+  A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
 
 At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns mosst closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
 
@@ -1159,9 +1159,11 @@ The most significant manifestation of this process is in the evolved of the lear
 
 Resources had with concrete additions from parents, PGCE students, Edlab students, University colleagues and with more indirect ongoing feedback from young people and their parents.
 
-With guidance, PGCE students created printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect.
+This approach was more prescriptive than I would have adopted, however it worked well. This hesitation overcome by intervention from others can be explored in terms of agency.
 
-This approach was more prescriptive than I would have adopted, however it worked well. This hesitation overcome by intervention from others can be explored in terms of agency. The students, fresh from PGCE training focused on increasing a scaffolded task which increased the instrumental agency of the participants.
+The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions.
+
+The students, fresh from PGCE training focused on increasing a scaffolded task which increased the instrumental agency of the participants.
 
 There is a connection in this process to foundational theories in the area of HCI and computing education.
 
