--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1134,7 +1134,7 @@ My journal notes see an evolution of attempts to try to build into the program, 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
 
 
-## Conclusion
+## Discussion of design issues
 
 ### Summary of barriers exposed in this study -
 
@@ -1147,15 +1147,108 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 or this one
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
 
-NOTE - THIS IS NEEDED FOR LATER CHAPTERS
+NOTE - (IS) THIS IS NEEDED FOR LATER CHAPTERS
+NOTE - IF NOT HERE THEN IN LIT REVIEW - REMOVE INTERVIEWS
 
-### Discussion on the emergent (and mutual) nature of the design (and research?) process.
+<!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
+After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
-As explored in chapter three , the process of this chapter is in line with exploratory research perspectives with an open remit to see what tensions come into focus in a particular setting.
+### Discussion on Authenticity of Tools
 
-This allows a subsequent  refocusing of research to explore these emerging issues in more depth.
+An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
 
-The most significant manifestation of this process is in the evolved of the learning design and resources.
+There are similarities and differences between the use of code playgrounds and templates by novices and professionals. A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
+
+The motivations for creating starter templates are similar. Both educators and professional template creators want to shield new users from the complexity of the underlying web-technology and instead highlight design affordances that facilitate creative agency. For the learners of this study, agency is expressed via inclusion of home interests, play with dynamics and game layout. The motivations of the professional would include experimentation to check if the framework will support desired end user features. This work helps analysis if it is worth allocating time learning the details of the framework in question.  
+
+**Authentic tool use and instrumental agency**
+
+The impact of coding tool use on instrumental agency can be explored here to develop the previous section
+
+<!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
+
+#### Analysis in relation to existing research on related design toolsets
+
+**Retaining a working game - helps sharing**
+
+The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
+
+While Scratch has an extensive online community allowing for remixing and showcasing of games,  the community element of the design are not is explored in this section. See instead chapter six.
+
+**Other tools and authenticity of Microworld**
+
+Research on other toolsets is instructive when exploring learning design tensions involving issues of authenticity and agency.
+
+These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014].
+
+In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
+
+This section compares the designed learning environment to the design factors of others exposed in research. In particular research on Microworlds and the Scratch tool, both tools were explored in brief in the literature review, is examined from the lenses of authenticity and agency.
+
+The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
+
+While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
+
+- Why not Scratch
+- Choice of Thimble initially
+- lack of mature community
+
+While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation.  
+
+Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding.
+
+Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT.
+
+#### Comparing my design to Scratch and Microworlds
+
+
+**Design principles / heuristics:**
+
+In scratch, the ability to reduce syntax errors through block coding was adopted.
+
+Reducing the complexity of coding environment in one of several guidelines ance in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005].
+
+Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling
+
+While Resnick's principles / heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
+
+
+<!-- Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z. -->
+<!-- While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask participant to focus their attention in this direction.
+- the community as they viewed each others assets and playtested games. -->
+
+**Simplifying the environment**
+
+I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
+
+These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
+
+The following issues are relevant to the learner experience- other ways to enclose / protect )
+- Issue of the complexity of support and technical documentation
+
+
+
+<!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
+<!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
+
+<!-- SIGNPOST TO NEXT CHAPTER OR REMOVE
+In my design, the use of GDPs in various scope forms this base: quick start activities; GDPs from a menu; novel GDPs/ -->
+
+<!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
+#### Conclusion on authenticity
+
+While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
+
+On agency?
+
+
+### On the emergent and mutual nature of the design and research process AND link to agency
+
+Another manifestation of the agency in this learning process was through the input of participants in the changing design of the program.
+
+As explored in chapter three, the process of this chapter is in line with exploratory research perspectives with an open remit to see what tensions come into focus in a particular setting.
+
+This allows a subsequent refocusing of research to explore these emerging issues in more depth. The most significant manifestation of this process is in the evolved of the learning design and resources.
 
 Resources had with concrete additions from parents, PGCE students, Edlab students, University colleagues and with more indirect ongoing feedback from young people and their parents.
 
@@ -1169,109 +1262,26 @@ There is a connection in this process to foundational theories in the area of HC
 
   - Affordances
   - UMC literature
-  - Game design patterns
+  - Design patterns
 
 <!-- NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY. -->
 
+Affordances within the domain of HCI research
+
+
 The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
-
-<!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
-After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
-
-### Discussion on Authenticity of Tools
-
-**observations?**
-
-There are similarities and differences between the use of code playgrounds by novices and professionals.
-DEVELOP IF NEEDED
-
-A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
-
-
-**impact?**
-
-An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
-
-The design of the starting template shields learners from much of the complexity of the underlying web-technology and provided potential affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout.
-
-The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
-
-These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
-
-While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
-
-#### Authentic tool use and instrumental agency
-
-The impact of coding tool use on instrumental agency can be explored here to develop the previous section
-
-**Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.  
-
-
-### Analysis in relation to existing research on related design toolsets
-
-**Other tools and authenticity of Microworld**
-
-Research on other toolsets is instructive on this tension.
-
-The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
-
-While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
-
-- Why not Scratch
-- Choice of Thimble initially
-- lack of mature community
-
-#### Comparing design to Scratch and Microworlds
-
-This section compares the designed learning environment to the design factors of others exposed in research. In particular research on Microworlds and the Scratch tool, both tools were explored in brief in the literature review, is examined from the lenses of authenticity and agency.
-
-While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speal LOGO to progress. The affordances of the physical turtle provide visible motivation.  
-
-Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding. Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT.
-
-
-**Discussion on design principles / heuristics  community design and guiding community behaviours :**
-
-Recap of constructionist heuristics .
-
-In scratch, the ability to reduce syntax errors through block coding was adopted.
-
-Reducing the complexity of coding environment in one of serveral guidelines ance in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005].
-
-Other user-friendly design heuristics inclue:  low-thresholds, wide-walls, high-ceiling
-
-While Resnick's principles / heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
-
-I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
-
-These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
-
-The following issues are relevant to the learner experience- other ways to enclose / protect )
-- Issue of the complexity of support and technical documentation
-
-Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
-
-<!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
-<!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
-
-In my design, the use of GDPs in various scope forms this base: quick start activities; GDPs from a menu; novel GDPs/
-
-<!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
-
-The community element of the design is explored in chapter six. While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask participant to focus their attention in this direction.
-- the community as they viewed each others assets and playtested games.
-
-
-LINK -
-While Resnick's principles are useful for the designer of the learning experience, they are less accessible to the end user. Resnick's work is heavily focused on the affordances of the tool for the general purposes of media creation. This leaves the responsibility for teachers to fill in how production is guided.
-
-The next chapter explores one element on this guidance for this programme in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
 
 
 
 ### Link to next chapter
 
+
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been relatively micro - barriers to computer coding and use of particular software - drawing on and aligning with the HCI literature and existing work which exposes problems of learning programming syntax.
+
+LINK -
+While Resnick's principles are useful for the designer of the learning experience, they are less accessible to the end user. Resnick's work is heavily focused on the affordances of the tool for the general purposes of media creation. This leaves the responsibility for teachers to fill in how production is guided.
+
+The next chapter explores one element on this guidance for this programme in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
 
 Pivot to next chapter,
 
