change to discussion

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1244,7 +1244,7 @@ On agency?
 
 ### On the emergent and mutual nature of the design and research process AND link to agency
 
-Another manifestation of the agency in this learning process was through the input of participants in the changing design of the program.
+A different dimension of the agency in this learning process was present via the input of participants in the changing design of the program.
 
 As explored in chapter three, the process of this chapter is in line with exploratory research perspectives with an open remit to see what tensions come into focus in a particular setting.
 
@@ -1268,13 +1268,9 @@ There is a connection in this process to foundational theories in the area of HC
 
 Affordances within the domain of HCI research
 
-
 The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
 
-
-
 ### Link to next chapter
-
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been relatively micro - barriers to computer coding and use of particular software - drawing on and aligning with the HCI literature and existing work which exposes problems of learning programming syntax.
 
