EDITING DOWN DOCS

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1092,20 +1092,7 @@ _Fig 4.x. Scan of Journal Sketch of early attempt at dividing features by type a
 
 The process of sketching, revising and re-sketching the elements led me to connect this process of categorisation with the work of game theorists. I had previously used collaborative analytical techniques which drawing on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. These had been developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games, and thus build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
 
-
-EDIT THIS DOWN AND BE CLEAR ON THE MOTIVATION IN TERMS OF AGENCY AND BARRIERS TO PARTICPATION
-
-- Building familiarity with the code - -.  alienation barriers  
-- choice and navigations - > agency
-
-
-In my adaptation I had asked participants to do play a number of retro arcade and console games and then to complete created a printable A3 hand out which was given to participant after playing The key elements I are:
-
-- SPACE: Where the game takes place.
-- GOAL: What is the objective of the game? What are you trying to do?
-- COMPONENTS: What are all the objects or actors in the game?
-- MECHANICS: What actions take place in the game. What are the verbs involved?
-- RULES: What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
+<!-- NOTE SOME MOVED TO NEXT CHAPTER -->
 
 This work also aligns with the MDA framework. I was drawn also to this framework due to the similar focus to the user experience which has potential to make the process of analysis games more accessible [@olsson2014conceptual].. I then took the existing list of game elements that have been identified by students and categorised them based on a blend of these two frameworks. I made some simplifications and adaption to increase accessibility for non-professional and young people. For example, the term of aesthetics is very wide and suited simplification _game polish_.
 
@@ -1115,13 +1102,7 @@ In P5 I extended the scheme to included  _System and Challenge_ patterns. These 
 
 ![Game Design Themes](./Pictures/four_gdp_themes.png){width=95%}
 
-This section has explored  detail of different themes the game pattern collection.
-
-
-
-This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements. While the process of games analysis has limited research for novice game makers, it is not the the field of learning text coding. Similarly this outcome of theming the patterns by function and  difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
-
-
+This section has described the process of categorising  different themes the game pattern collection.  Similarly this outcome of theming the patterns by function and  difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching]. This theme is continued in the next chapter which explores the impact on users of GDPs.  
 
 <!--
 My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals. In doing this I have taken inspiration from Bartle's game player types Hamari and Tuunanen, 2014). I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
@@ -1136,19 +1117,34 @@ An additional rationale for this process was to help reduce potential internal b
 
 ## Discussion of design issues
 
-### Summary of barriers exposed in this study -
+### Summary of barriers and tensions explored in this chapter
 
-NOTE - PERHAPS MOVE BACK UP TO INTERVIEW SECTION?
+The following summary table lists barriers and tensions drawn from the literature review that were significant when reviewing my journal observations, feedback from participants and video data.
 
-A summary (table or text) of the barriers and tensions exposed in interviews and in journal observations and in feedback from participants. Perhaps linking to appendix.
+The purpose of this summary is to help recap and ground the reader before exploring the experiences of participants in more detail in chapters five and six. It focuses on use of tools but also signposts some social and cultural elements.
 
-Return to this table
+<!-- NOTE Perhaps linking to appendix. -->
+
+
+| **Barrier / Tension**| **Description** | **Related Intervention**         
+|--------|------------|--------------|
+| Unfamiliarity with language and syntax   | Example: Javascript use of punctuation especially in arrays and in the structuring of functions. |  Use of UMC pedagogy and quick start examples to build familiarity  |
+| Unfamiliarity with coding concepts   | Example: the use of if statements and global variables  |  Supporting resources to reinforce previous experimentation with the code base and facilitator explanation when concepts are met in-situ   |
+| Barriers to comprehending the overall game code template   | The use of preload, create and update functions   |  Outlining the structure in supporting resources and game to reinforce and test tacit knowledge in a playful way |
+| Lack of direct knowledge of game making approaches  | Play states, game design patterns, impact of aesthetics    |  Games and activities to access and surface tacit knowledge, use of a structured GDP collection to reinforce concepts |
+| Alienation from culture of computer coding  | As outlined in literature review.     |  Use of games, play testing and other social approaches. Explored in chapter six |
+| Professional coding tools increase authenticity at the prices of complexity  | While suitable open source tools exist, they need careful curation by faciliators to reduce cognitive load    |  Design of template to surface key affordances.  |
+
+<!-- NOTE Not included
+Social feare, problems of group work
+Attention factors, maintaining persistance
+Learning concepts via instruction is demotivating -->
+
+NOTE - also return to this table
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 or this one
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
 
-NOTE - (IS) THIS IS NEEDED FOR LATER CHAPTERS
-NOTE - IF NOT HERE THEN IN LIT REVIEW - REMOVE INTERVIEWS
 
 <!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
 After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
