--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -111,9 +111,6 @@ In the last chapter we explored inclusive pedagogical methods that helped partic
 This chapter analyses a sub-activity system to the creation of the whole game, namely the implementation of individual game design patterns (GDPs).
 
 
-
-
-
 ### Chapter outline
 
 This chapter begins with reframing of game design patterns and game play design patterns which builds on the previous chapters description of the emerging learning design.
@@ -149,9 +146,6 @@ Recap on the value of design patterns in learning design which exist at differen
 How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
 
 ### On GDP as a Germ cell and unit of Analysis
-
-
-
 <!-- Explore the dividing line  -->
 
 
@@ -202,8 +196,31 @@ This sentiment is echoed by something I found in the video data. As one parent e
 
 Analysing the implementation of GDPs as a unit of activity allows the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design.
 
+MOVE FROM LAST CHAPTER
+
+**Building familiarity with game structure**
 
 
+EDIT THIS DOWN AND BE CLEAR ON THE MOTIVATION IN TERMS OF AGENCY AND BARRIERS TO PARTICPATION
+
+- Building familiarity with the code - -.  alienation barriers  
+- choice and navigations - > agency
+
+
+In my adaptation I had asked participants to do play a number of retro arcade and console games and then to complete created a printable A3 hand out which was given to participant after playing The key elements I are:
+
+- SPACE: Where the game takes place.
+- GOAL: What is the objective of the game? What are you trying to do?
+- COMPONENTS: What are all the objects or actors in the game?
+- MECHANICS: What actions take place in the game. What are the verbs involved?
+- RULES: What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
+
+
+This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements.
+
+The motivation is to incrementally build familiarity with the language and concepts of game design through begining with analysis, then categories use when seeking desired patterns, and further via reading supporting documentation.
+
+While the process of games analysis has limited research for novice game makers, there is related research in the field of learning text coding. FIND?
 
 
 ## Study of Vignette A
